--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>API Frontend</title>
 </head>
 <body>
@@ -32,20 +33,21 @@
         <br>
         <button id="fetchData">Fetch Data</button>
         <canvas id="chart"></canvas>
+        <div id="metricsOutput"></div>
         <div id="dataOutput"></div>
     </div>
 
-    <div class="form">
-        <h2>Fetch Metrics</h2>
-        <label for="metricField">Field:</label>
-        <select id="metricField">
-            <option value="temperature">Temperature</option>
-            <option value="humidity">Humidity</option>
-            <option value="co2">CO2</option>
-        </select>
-        <button id="fetchMetrics">Fetch Metrics</button>
-        <div id="metricsOutput"></div>
-    </div>
+<!--    <div class="form">-->
+<!--        <h2>Fetch Metrics</h2>-->
+<!--        <label for="metricField">Field:</label>-->
+<!--        <select id="metricField">-->
+<!--            <option value="temperature">Temperature</option>-->
+<!--            <option value="humidity">Humidity</option>-->
+<!--            <option value="co2">CO2</option>-->
+<!--        </select>-->
+<!--        <button id="fetchMetrics">Fetch Metrics</button>-->
+<!--        <div id="metricsOutput"></div>-->
+<!--    </div>-->
 </div>
 
 
