--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,16 @@
         <h2>Fetch Time-Series Data</h2>
         <label for="field">Field:</label>
         <select id="field">
-            <option value="temperature">Temperature</option>
+            <option value="temp">Temperature</option>
+            <option value="tempmax">Max temperature</option>
+            <option value="tempmin">Min temperature</option>
             <option value="humidity">Humidity</option>
-            <option value="co2">CO2</option>
+            <option value="feelslike">Feels Like temperature</option>
+            <option value="windspeed">Wind speed</option>
+            <option value="winddir">Wind direction</option>
+            <option value="pressure">Pressure</option>
+            <option value="uvindex">UV index</option>
+
         </select>
         <br>
         <br>
@@ -37,17 +44,6 @@
         <div id="dataOutput"></div>
     </div>
 
-<!--    <div class="form">-->
-<!--        <h2>Fetch Metrics</h2>-->
-<!--        <label for="metricField">Field:</label>-->
-<!--        <select id="metricField">-->
-<!--            <option value="temperature">Temperature</option>-->
-<!--            <option value="humidity">Humidity</option>-->
-<!--            <option value="co2">CO2</option>-->
-<!--        </select>-->
-<!--        <button id="fetchMetrics">Fetch Metrics</button>-->
-<!--        <div id="metricsOutput"></div>-->
-<!--    </div>-->
 </div>
 
 
