--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,13 @@
         <div id="dataOutput"></div>
     </div>
 
+    <input type="file" id="fileInput">
+    <button id="uploadButton">Upload Data</button>
+    <p id="uploadStatus"></p>
+
+
 </div>
+
 
 
 <script src="scripts.js"></script>
